# Astra_launcher

./: .eslintrc.json  .gitignore  TODO.md  conf.js  imdex.tsx  index.html  latest-1.6.9.json  latest-1.7.0.json  latest.json  latest.json.sig  package-lock.json  package.json  splash.html  tailwind.config (2).js  tailwind.config.js  tsconfig.json  vite.config.js
crash_dump/: 78214336-4849-4f34-a844-0d0d48e2e981.dmp  crashometry.json
scripts/: create-release.ps1
src/: App.svelte  LauncherFrame.svelte  app.css  constants.ts  errorHandling.ts  i18n.ts  main.js  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Background.svelte  CloseConfirmModal.svelte  LogoutConfirmModal.svelte  Notifications.svelte  OnboardingModal.svelte  PlaySection.svelte  Settings.svelte  Sidebar.svelte  StoreItem.svelte  StoreSection.svelte  UpdateIndicator.svelte  UpdateModal.svelte  WindowControls.svelte
src/stores/: audioStore.svelte.ts  fivemStore.svelte.ts  onboardingStore.svelte.ts  serverStore.svelte.ts  storeStore.svelte.ts  updateStore.svelte.ts
